# netdata-debian

./: Makefile.in  aclocal.m4  config.h.in  configure  netdata.spec  netdata_1.0.0.orig.tar.gz.delta  netdata_1.0.0.orig.tar.gz.id  netdata_1.1.0.orig.tar.xz.delta  netdata_1.10.0+dfsg.orig.tar.xz.delta  netdata_1.10.0+dfsg.orig.tar.xz.id  netdata_1.11.0+dfsg.orig.tar.xz.delta  netdata_1.11.0+dfsg.orig.tar.xz.id  netdata_1.11.1+dfsg.orig.tar.xz.delta  netdata_1.11.1+dfsg.orig.tar.xz.id  netdata_1.12.0.orig.tar.xz.delta  netdata_1.12.0.orig.tar.xz.id  netdata_1.12.1.orig.tar.xz.delta  netdata_1.12.1.orig.tar.xz.id  netdata_1.12.2.orig.tar.xz.delta  netdata_1.12.2.orig.tar.xz.id  netdata_1.13.0.orig.tar.xz.delta  netdata_1.13.0.orig.tar.xz.id  netdata_1.14.0.orig.tar.xz.delta  netdata_1.14.0.orig.tar.xz.id  netdata_1.14.0~rc0.orig.tar.xz.delta  netdata_1.14.0~rc0.orig.tar.xz.id  netdata_1.15.0.orig.tar.xz.delta  netdata_1.15.0.orig.tar.xz.id  netdata_1.16.0.orig.tar.xz.delta  netdata_1.16.0.orig.tar.xz.id  netdata_1.16.1.orig.tar.xz.delta  netdata_1.16.1.orig.tar.xz.id  netdata_1.17.1.orig.tar.xz.delta  netdata_1.17.1.orig.tar.xz.id  netdata_1.18.0.orig.tar.xz.delta  netdata_1.18.0.orig.tar.xz.id  netdata_1.18.1.orig.tar.xz.delta  netdata_1.18.1.orig.tar.xz.id  netdata_1.19.0.orig.tar.xz.delta  netdata_1.19.0.orig.tar.xz.id  (+17 more)
backends/: Makefile.in
charts.d/: Makefile.in
collectors/: Makefile.in
conf.d/: Makefile.in
contrib/: Makefile.am  Makefile.in
contrib/debian/: changelog
daemon/: Makefile.in  anonymous-statistics.sh
database/: Makefile.in
debian/: TODO  (+35 more)
(+164 files in other folders)
